--- a/build.gradle
+++ b/build.gradle
@@ -5,17 +5,17 @@ buildscript {
         }
     }
     dependencies {
-        classpath "io.spring.gradle:dependency-management-plugin:1.0.11.RELEASE"
+        classpath "io.spring.gradle:dependency-management-plugin:1.1.0"
     }
 }
 
 plugins {
-    id "org.sonarqube" version "3.5.0.2730"
-    id "org.owasp.dependencycheck" version "8.0.2"
+    id "org.sonarqube" version "4.0.0.2929"
+    id "org.owasp.dependencycheck" version "8.1.0"
     id "jacoco"
 }
 
-task printVersion {
+tasks.register('printVersion') {
     doLast {
         println project.version
     }
@@ -32,7 +32,7 @@ allprojects {
     }
 
     group = 'be.yonicon.template'
-    version = System.getenv('BITBUCKET_COMMIT') != null ? System.getenv('BITBUCKET_COMMIT').substring(0, 7) : 'local'
+    version = System.getenv('CI_COMMIT_SHORT_SHA') != null ? System.getenv('CI_COMMIT_SHORT_SHA').substring(0, 7) : 'local'
 }
 
 subprojects {
@@ -53,7 +53,7 @@ subprojects {
         }
     }
 
-    def test = tasks.named("test") {
+    tasks.named("test") {
         useJUnitPlatform {
             excludeTags "slow-test"
         }
@@ -65,7 +65,7 @@ subprojects {
         }
     }
 
-    def slowTest = tasks.register("slowTest", Test) {
+    tasks.register("slowTest", Test) {
         useJUnitPlatform {
             includeTags "slow-test"
         }
