--- a/build.gradle
+++ b/build.gradle
@@ -81,9 +81,10 @@ subprojects {
     dependencyManagement {
         imports {
             mavenBom 'org.springframework.boot:spring-boot-dependencies:2.7.8'
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.5"
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.1"
         }
         dependencies {
+            dependency 'io.micrometer:micrometer-tracing-bridge-otel:1.0.2'
             dependency 'net.logstash.logback:logstash-logback-encoder:7.2'
             dependency 'io.springfox:springfox-boot-starter:3.0.0'
         }
