--- a/code/sanity-tests/build.gradle
+++ b/code/sanity-tests/build.gradle
@@ -32,6 +32,12 @@ tasks.register('copyJarToDockerDir', Copy) {
     into "$buildDir/docker"
 }
 
+tasks.register('copyDockerfileToDockerDir', Copy) {
+    from "$projectDir/src/main/docker"
+    include "**/*"
+    into "$buildDir/docker"
+}
+
 tasks.register('buildDockerImage', Exec) {
     workingDir "$buildDir"
     commandLine "podman", "build", "-t", "yonicon/${dockerBuildName}:${project.version}", "docker"
@@ -42,6 +48,6 @@ tasks.register('pushDockerImage', Exec) {
 }
 
 copyJarToDockerDir.dependsOn shadowJar
-//buildDockerImage.dependsOn prepareDockerDir
 buildDockerImage.dependsOn copyJarToDockerDir
+buildDockerImage.dependsOn copyDockerfileToDockerDir
 pushDockerImage.dependsOn buildDockerImage
