--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ allprojects {
         mavenCentral()
     }
 
-    group = 'be.yonicon.template'
+    group = 'be.yonicon.template-java11-spring5-gradle'
     version = System.getenv('CI_COMMIT_SHORT_SHA') != null ? System.getenv('CI_COMMIT_SHORT_SHA').substring(0, 7) : 'local'
 }
 
