--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'template'
+rootProject.name = 'template-java11-spring5-gradle'
 
 include(':in-memory-adapter')
 include(':rdbms-adapter')
