--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
 plugins {
     id "org.sonarqube" version "4.0.0.2929"
-    id "org.owasp.dependencycheck" version "8.1.0"
+    id "org.owasp.dependencycheck" version "8.2.1"
     id "jacoco"
 }
 
@@ -80,13 +80,13 @@ subprojects {
 
     dependencyManagement {
         imports {
-            mavenBom 'org.springframework.boot:spring-boot-dependencies:2.7.8'
-            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.1"
+            mavenBom 'org.springframework.boot:spring-boot-dependencies:2.7.11'
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.2"
         }
         dependencies {
-            dependency 'io.micrometer:micrometer-tracing-bridge-otel:1.0.2'
-            dependency 'net.logstash.logback:logstash-logback-encoder:7.2'
-            dependency 'io.springfox:springfox-boot-starter:3.0.0'
+            dependency 'io.micrometer:micrometer-tracing-bridge-otel:1.0.4'
+            dependency 'net.logstash.logback:logstash-logback-encoder:7.3'
+            dependency 'org.springdoc:springdoc-openapi-ui:1.7.0'
         }
     }
 
