--- a/code/infra/frontend-adapters/rest-adapter/build.gradle
+++ b/code/infra/frontend-adapters/rest-adapter/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    implementation 'io.springfox:springfox-boot-starter'
+    implementation 'org.springdoc:springdoc-openapi-ui'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
