--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,15 @@ buildscript {
 }
 
 plugins {
+    id "java"
+    id "jacoco"
     id "org.sonarqube" version "4.0.0.2929"
     id "org.owasp.dependencycheck" version "8.2.1"
-    id "jacoco"
+
+    id "org.springframework.boot" version "2.7.11" apply false
+    id "io.freefair.lombok" version "8.0.1" apply false
+    id "com.gorylenko.gradle-git-properties" version "2.4.1" apply false
+    id "com.github.johnrengelman.shadow" version "8.1.1" apply false
 }
 
 tasks.register('printVersion') {
