--- a/code/main/main-boot/build.gradle
+++ b/code/main/main-boot/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id "org.springframework.boot" version "2.7.11"
-    id "com.gorylenko.gradle-git-properties" version "2.4.1"
+    id "org.springframework.boot"
+    id "com.gorylenko.gradle-git-properties"
     id 'java'
 }
 
